<resources>
    <string name="app_name">SmackChat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="add_channel_button">add channel button</string>
    <string name="login">Login</string>
    <string name="please_log_in">Please Log in!!!</string>
    <string name="message">Message:</string>
    <string name="send_message_button">send message button</string>
    <string name="logout">logout</string>
    <string name="need_an_account">Need an account?</string>
    <string name="sign_up_here">Sign up here!</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="change_avatar_background_color">Change avatar background color</string>
    <string name="avtar_image_used_a_a_profile_picture">Avtar image used a a profile picture</string>
    <string name="tap_the_to_generate_a_new_avatar">Tap the to generate a new avatar</string>
    <string name="password">Password</string>
    <string name="sing_up">Sing Up</string>
</resources>
