<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/fullNameInput" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:hint="@string/full_name"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/signUpEmailInput"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/fullNameInput" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" android:hint="@string/email"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/signUpPasswordInput"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/signUpEmailInput" android:hint="@string/password"/>
    <TextView
            android:text="@string/tap_the_to_generate_a_new_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/signUpPasswordInput"
            android:layout_marginTop="32dp" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            android:textSize="18sp"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/profiledefault"
            android:id="@+id/signUpAvatarImage"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="24dp" android:onClick="onAvatarImageClicked"
            android:contentDescription="@string/avtar_image_used_a_a_profile_picture"/>
    <Button
            android:text="@string/change_avatar_background_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/changeAvatarBackgroundBtn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/signUpAvatarImage" android:textSize="14sp"
            android:textColor="@android:color/white" android:background="@color/colorPrimaryDark"
            android:onClick="onChangeBackgroundBtnClicked"/>
    <Button
            android:text="@string/sing_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/signUpBtn"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:background="@color/colorPrimaryDark"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textColor="@android:color/white"
            android:onClick="onSignUpBtnClicked"/>

</android.support.constraint.ConstraintLayout>