<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/loginUsernameInput" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent" tools:text="Username"
            android:textColorHint="@android:color/black" android:textColor="@android:color/black"
            android:hint="Username"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/loginPasswordInput" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/loginUsernameInput"
            android:hint="Password"/>
    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginBtn" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/loginPasswordInput" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintHorizontal_bias="0.498" android:background="@color/colorPrimary"
            android:textColor="@android:color/white" android:textSize="18sp" android:onClick="onLoginBtnClicked"/>
    <TextView
            android:text="@string/need_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn" android:layout_marginTop="88dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"/>
    <Button
            android:text="@string/sign_up_here"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/signUpBtn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:onClick="onSignUpBtnClicked"/>
</android.support.constraint.ConstraintLayout>